# reputationcrisis-env

./: .gitignore  Dockerfile  README.md  demo.html  inference.py  openenv.yaml  pyproject.toml  requirements.txt  smoke_test.py
backend/: .gitignore  __init__.py  main.py
backend/agents/: baseline_agent.py
backend/env/: environment.py  models.py
backend/tasks/: tasks.py
frontend/: .env  .gitignore  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ActionPanel.jsx  CrisisGlobe.jsx  EventLog.jsx  MetricsHeader.jsx  SentimentChart.jsx  TaskSelector.jsx  TrustMeter.jsx  index.jsx
frontend/src/hooks/: useEnvironment.js
server/: app.py
