[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "digital-reputation-crisis-manager"
version = "1.0.0"
description = "OpenEnv-compliant AI environment for simulating real-world PR crisis management"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]