[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "digital-reputation-crisis-manager"
version = "1.0.0"
description = "OpenEnv-compliant PR Crisis Simulation Environment"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main" 

[tool.hatch.build.targets.wheel]
packages = ["backend", "server"]